// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar renders with color amber 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--amber"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color blue 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--blue"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color brown 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--brown"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color chartreuse 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--chartreuse"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color green 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--green"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color grey 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--grey"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color lilac 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--lilac"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color orange 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--orange"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color pink 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--pink"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color purple 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--purple"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color rose 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with color teal 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--teal"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with defaultProps 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with labelStrong 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label"
        >
          <small
            className="ax-text--size-small ax-text--strong"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with minSize down 1`] = `
<div
  className="ax-bars ax-bars--down"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "2rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with minSize left 1`] = `
<div
  className="ax-bars ax-bars--left"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": undefined,
              "minHeight": "2rem",
              "minWidth": false,
              "width": false,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with minSize right 1`] = `
<div
  className="ax-bars ax-bars--right"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": undefined,
              "minHeight": "2rem",
              "minWidth": false,
              "width": false,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with minSize up 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "2rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with onClick 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--clickable"
        onClick={[Function]}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with showLabel 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": "1rem",
              "width": undefined,
            }
          }
        />
        <div
          className="ax-bars__bar-label"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size and minSize down 1`] = `
<div
  className="ax-bars ax-bars--down"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": false,
              "width": "2rem",
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size and minSize left 1`] = `
<div
  className="ax-bars ax-bars--left"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": "2rem",
              "minHeight": false,
              "minWidth": false,
              "width": false,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size and minSize right 1`] = `
<div
  className="ax-bars ax-bars--right"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": "2rem",
              "minHeight": false,
              "minWidth": false,
              "width": false,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size and minSize up 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": false,
              "width": "2rem",
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size down 1`] = `
<div
  className="ax-bars ax-bars--down"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": false,
              "width": "2rem",
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size left 1`] = `
<div
  className="ax-bars ax-bars--left"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": "2rem",
              "minHeight": false,
              "minWidth": false,
              "width": false,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size right 1`] = `
<div
  className="ax-bars ax-bars--right"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": false,
            "width": "50%",
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": "2rem",
              "minHeight": false,
              "minWidth": false,
              "width": false,
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bar renders with size up 1`] = `
<div
  className="ax-bars ax-bars--up"
>
  <div
    className="ax-bars__bars-container"
  >
    <div
      className="ax-bars__bars"
    >
      <div
        className="ax-bars__bar ax-bars__bar--center"
        onClick={undefined}
        style={
          Object {
            "height": "50%",
            "width": false,
          }
        }
      >
        <div
          className="ax-bars__bar-rect ax-bars__bar-rect--rose"
          style={
            Object {
              "height": false,
              "minHeight": false,
              "minWidth": false,
              "width": "2rem",
            }
          }
        />
        <div
          className="ax-bars__bar-label ax-bars__bar-label--hidden"
        >
          <small
            className="ax-text--size-small"
          >
            50%
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;
